vix/tests/checker-corpus/reject/unresolved-module.vix
use nope::Thing;

fn main() -> Int {
    1
}
